[package]
name = "deb-version"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

description = "Compare (Debian-style) version numbers"
repository = "https://github.com/FauxFaux/deb-version"
readme = "../README.md"
categories = ["os", "parsing"]
license = "MIT"

[dependencies]

[dev-dependencies]
apt-pkg-native = "0.2.0"
lazy_static = "0.2.8"
quickcheck = "0.4.1"
rand = "0.3.16"
regex = "0.2.2"
