[package]
name = "deb-version"
version = "0.1.1"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

description = "Compare (Debian-style) version numbers"
repository = "https://github.com/FauxFaux/deb-version"
readme = "../README.md"
categories = ["os", "parsing"]
license = "MIT"

[dependencies]

[dev-dependencies]
apt-pkg-native = "0.3"
lazy_static = "1"
quickcheck = "0.8"
rand = "0.6"
regex = "0.2"
