[package]
name = "deb-version"
version = "0.1.1"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

description = "Compare (Debian-style) version numbers"
repository = "https://github.com/FauxFaux/deb-version"
readme = "../README.md"
categories = ["os", "parsing"]
license = "MIT OR Apache-2.0"

edition = "2018"

[dependencies]

[dev-dependencies]
apt-pkg-native = "0.3"
lazy_static = "1"
quickcheck = "0.9"
rand = "0.7"
regex = "1"
